# energiapy

./: .codacy.yaml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  Ammonia.ipynb  CHANGELOG.md  CITATION.cff  Exercise_Global_Energy_Future.ipynb  FOCAPO.ipynb  HDPE-recycling of CO2-Renew1-H2.ipynb  HDPE-recycling of CO2-diff H2.ipynb  Henry_Hub_Natural_Gas_Spot_Price_Daily.csv  Houston_MILP.ipynb  IE_IS_node_multimode.ipynb  Ivanov Example Baseline New.ipynb  LCA.ipynb  LICENSE  ProjectCode_EnergyEfficiency.ipynb  ProjectCode_ReduceCost.ipynb  README.md  Uncertain_demand .ipynb  Uncertain_demand_harsh.ipynb  analysis.py  attributes.xlsx  background.rst  battery_cx.py  boundary_problems-2.py  boundary_problems.py  case_study.ipynb  case_study.py  clustering.ipynb  code_dump.py  components.ipynb  conf.py  conversion.csv  conversion.json  costing_data.xlsx  counties.ipynb  (+79 more)
AICHE/: Aiche_1_year_Design_and_Schedule.ipynb  Aiche_Design_and_Schedule.ipynb  Chegsa Static vs Dynamic LCA with battery storage.ipynb  EMM Case Study.ipynb  Final_Aiche_1_year_Design_and_Schedule.ipynb  Saudi Aramco Visit Scope 4 Grid.ipynb  Saudi Aramco Visit Scope 4 WF.ipynb
Betsie_Marco Collab/: EMM+driving-ESCAPE-CAP.ipynb  Energy-Materials-Mobility example3_NV_NM.ipynb
ESCAPE/: 24 Belgium Time Constant EF.ipynb  24 Belgium Time Varying EF.ipynb  Belgium Constant EF.ipynb  Belgium Time Constant EF.ipynb  Belgium Time Varying EF.ipynb  Piecewise penalty.ipynb  d2_production.csv  d2_production_TV.csv  d3_production.csv  d3_production_TV.csv
Harsh Test/: DemandPred.csv  Harsh_Storage.ipynb  WindPred.csv
Real-Time/: ATR, AWE Addition test.ipynb  Constant_GWP.ipynb  Demo_Different_Hydrogen_Systems.ipynb  Demo_tool Case Study.ipynb  Demo_widget.ipynb  Dump Test.ipynb  ERS Different hydrogen systems.ipynb  ERS Different hydrogen systems_No realistic constraints.ipynb  Halil_Supply_Chain.ipynb  NEWYORK_ELEC.csv.xlsx  RT 06 JUNE.csv  RT vs DAM day one.ipynb  RT vs DAM.ipynb  RTCA with Forecast.ipynb  RTCA with Perfect Information.ipynb  RTCA.ipynb  RTCA2.ipynb  RTCA3.ipynb  RTCA4.ipynb  RTCA5.ipynb  RTCA6_scope_grouping.ipynb  Real time carbon accounting.ipynb  Scope Formulation_Scale_Up_Ramp_Up_Down_Determ_NG.ipynb  Solar2424.csv  Test varying gwp.ipynb  Time_varying_EF.ipynb  Time_varying_GWP.ipynb  Untitled-1.ipynb  Wind2424.csv  gamey.ipynb  iyu8.ipynb  output.xlsx  res_cost.pkl  res_gwp.pkl  res_gwp_10.pkl  res_gwp_100.pkl  res_gwp_20.pkl  res_gwp_3.pkl  res_gwp_30.pkl  res_gwp_40.pkl  (+17 more)
(+2416 files in other folders)
