
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energia"
version = "2.0.0"
authors = [
  { name="Rahul Kakodkar", email="cacodcar@gmail.com" },
  {name = "Efstratios Pistikopoulos", email = "stratos@tamu.edu"}
]
maintainers = [
  { name="Rahul Kakodkar", email="cacodcar@gmail.com" },
]
description = "For multiscale modeling and optimization of energy systems"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["modeling", "optimization", "energy systems", "ems", "multiscale"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["gana", "ppopt", "matplotlib"]
[project.optional-dependencies]
test = ["coverage", "pytest"]

[project.urls]
Homepage = "https://github.com/TAMUparametric/energia"
Issues = "https://github.com/TAMUparametric/energia/issues"
